--- a/maPage.html
+++ b/maPage.html
@@ -9,6 +9,58 @@
     <body>
         <div id="maDiv">Le joueur numero 1 attaque</div>
         <div id="affichage"></div>
+        
+        <div class="champDeBataille" ></div>
+            <div class="monstresSprite" >
+                <div class="monstre1">
+                    <img src= "img/mob01.png">
+                </div>
 
+                <div class="monstre2">
+                    <img src= "img/mob02.png">
+                </div>
+
+                <div class="monstre3">
+                    <img src= "img/mob03.png">
+                </div>
+
+            </div>
+
+            <div class="herosSprite"></div>
+
+            <div class="boiteHeros">
+
+                <div class="heros1">
+                    <div class="pointDeVie"></div>
+                    <div class="mana"></div>
+                    <div class="attaque"></div>
+                    <div class="defense"></div>
+                    <div class="attaqueSpe1"></div>
+                </div>
+
+                <div class="heros2">
+                    <div class="pointDeVie"></div>
+                    <div class="mana"></div>
+                    <div class="attaque"></div>
+                    <div class="defense"></div>
+                    <div class="attaqueSpe2"></div>
+                </div>
+
+                <div class="heros3">
+                    <div class="pointDeVie"></div>
+                    <div class="mana"></div>
+                    <div class="attaque"></div>
+                    <div class="defense"></div>
+                    <div class="attaqueSpe3"></div>
+                </div> 
+
+                <div class="heros4">
+                    <div class="pointDeVie"></div>
+                    <div class="mana"></div>
+                    <div class="attaque"></div>
+                    <div class="defense"></div>
+                    <div class="attaqueSpe4"></div>
+                </div>
+            </div>
     </body>
 
