tous les sprites

--- a/maPage.html
+++ b/maPage.html
@@ -10,7 +10,7 @@
         <div id="maDiv">Le joueur numero 1 attaque</div>
         <div id="affichage"></div>
         
-        <div class="champDeBataille" ></div>
+        <div class="champDeBataille" >
             <div class="monstresSprite" >
                 <div class="monstre1">
                     <img src= "img/mob01.png">
@@ -26,40 +26,49 @@
 
             </div>
 
-            <div class="herosSprite"></div>
+            <div class="herosSprite">
+                <div class="tropPetit">
+                    <img src= "img/hero1.png">
+                </div>
+                    <img src= "img/hero2.png">
+                    <img src= "img/hero3.png">
+                    <img src= "img/hero4.png">
+            </div>
 
+        </div>
             <div class="boiteHeros">
 
                 <div class="heros1">
-                    <div class="pointDeVie"></div>
-                    <div class="mana"></div>
-                    <div class="attaque"></div>
-                    <div class="defense"></div>
-                    <div class="attaqueSpe1"></div>
+                    <div class="pointDeVie">PV</div>
+                    <div class="mana">Mana</div>
+                    <div class="attaque">Attaque</div>
+                    <div class="defense">Defense</div>
+                    <div class="attaqueSpe1">Sort</div>
                 </div>
 
                 <div class="heros2">
-                    <div class="pointDeVie"></div>
-                    <div class="mana"></div>
-                    <div class="attaque"></div>
-                    <div class="defense"></div>
-                    <div class="attaqueSpe2"></div>
+                    <div class="pointDeVie">PV</div>
+                    <div class="mana">Mana</div>
+                    <div class="attaque">Attaque</div>
+                    <!---->
+                    <div class="defense">Defense</div>
+                    <div class="attaqueSpe2">Sort</div>
                 </div>
 
                 <div class="heros3">
-                    <div class="pointDeVie"></div>
-                    <div class="mana"></div>
-                    <div class="attaque"></div>
-                    <div class="defense"></div>
-                    <div class="attaqueSpe3"></div>
+                    <div class="pointDeVie">Pv</div>
+                    <div class="mana">Mana</div>
+                    <div class="attaque">Attaque</div>
+                    <div class="defense">Defense</div>
+                    <div class="attaqueSpe3">Sort</div>
                 </div> 
 
                 <div class="heros4">
-                    <div class="pointDeVie"></div>
-                    <div class="mana"></div>
-                    <div class="attaque"></div>
-                    <div class="defense"></div>
-                    <div class="attaqueSpe4"></div>
+                    <div class="pointDeVie">Pv</div>
+                    <div class="mana">Mana</div>
+                    <div class="attaque">Attaque</div>
+                    <div class="defense">Defense</div>
+                    <div class="attaqueSpe4">Sort</div>
                 </div>
             </div>
     </body>
