--- a/maPage.html
+++ b/maPage.html
@@ -12,6 +12,7 @@
         
         <div class="champDeBataille" >
             <div class="monstresSprite" >
+
                 <img class = "boiteMonstres" src= "img/mob01.png">
                     <span class="monstre1">
                         <progress id="pvMonstre1" value="100" max="100"></progress>
@@ -20,13 +21,29 @@
                     </span>
                 </img>
 
-                <div class="monstre2">
-                    <img src= "img/mob02.png">
-                </div>
+                <img class = "boiteMonstres" src= "img/mob02.png">
+                    <span class="monstre2">
+                        <progress id="pvMonstre2" value="100" max="100"></progress>
 
-                <div class="monstre3">
+                        <div id= "monstre2"></div>
+                    </span>
+                </img>
+
+               <!-- <div class="monstre2">
+                    <img src= "img/mob02.png">
+                </div> -->
+
+                <img class = "boiteMonstres" src= "img/mob03.png">
+                <span class="monstre2">
+                    <progress id="pvMonstre3" value="100" max="100"></progress>
+
+                    <div id= "monstre3"></div>
+                </span>
+            </img>
+
+                <!--<div class="monstre3">
                     <img src= "img/mob03.png">
-                </div>
+                </div> -->
 
             </div>
 
