--- a/maPage.html
+++ b/maPage.html
@@ -18,7 +18,7 @@
                                 <div class="monstresSprite" >
                                                 <!--Affichage des monstres et la barre de vie-->
                                     <div class = "barrePv"> 
-                                        <img class = "boiteMonstres" src= "img/mob01.png" /> 
+                                        <img class = "boiteMonstres" src= "img/mob01.png" visible /> 
 
                                         <span class="monstre1">
                                             <progress id="pvMonstre1" value="100" max="100"></progress>
@@ -57,7 +57,7 @@
                                 <img id = "animationDmg4" src= "img/slash.png" hidden /> <!-- Afichage heros + annimation attaque -->
                             </div>
                                 <div class="herosSprite">
-                                        <img class = "boitePvHeros" src= "img/hero1.png">
+                                        <img class = "boitePvHeros"src= "img/hero1.png">
                                             <span class="barreHero1">   <!--barre de vie -->
                                                 <progress id="pvHero1" value="100" max="100"></progress>
 
